var searchData=
[
  ['unsafe_5farena_5frelease_5fresult_511',['unsafe_arena_release_result',['../classfixbug_1_1LoginResponse.html#a292e99c837913f00430bb6772efa8895',1,'fixbug::LoginResponse']]],
  ['unsafe_5farena_5fset_5fallocated_5fresult_512',['unsafe_arena_set_allocated_result',['../classfixbug_1_1LoginResponse.html#a3945b264b6b0dbad6e2d641a99be1f59',1,'fixbug::LoginResponse']]],
  ['unsafearenaswap_513',['UnsafeArenaSwap',['../classfixbug_1_1LoginRequest.html#a18bb983596e2d7f09e529ba945c84d1e',1,'fixbug::LoginRequest::UnsafeArenaSwap()'],['../classfixbug_1_1ResultCode.html#ad31c2a2d2ba8e8d05ecfa65075d4224e',1,'fixbug::ResultCode::UnsafeArenaSwap()'],['../classfixbug_1_1LoginResponse.html#a7c40d3b151376e84c22c6810af088d3e',1,'fixbug::LoginResponse::UnsafeArenaSwap()']]],
  ['user_514',['user',['../classfixbug_1_1user.html#a6e3c5625ef227f9dfbd4a1c98b8bd872',1,'fixbug::user']]],
  ['user_5fstub_515',['user_Stub',['../classfixbug_1_1user__Stub.html#a778a39ba1346993ab7162c036de7fab8',1,'fixbug::user_Stub::user_Stub(::PROTOBUF_NAMESPACE_ID::RpcChannel *channel)'],['../classfixbug_1_1user__Stub.html#a9245f9ed8dd163b7500969f8aaaeded3',1,'fixbug::user_Stub::user_Stub(::PROTOBUF_NAMESPACE_ID::RpcChannel *channel, ::PROTOBUF_NAMESPACE_ID::Service::ChannelOwnership ownership)']]]
];
